# api/database/models/userModel.ts
@@ -1,5 +1,6 @@
 import mongoose, { Schema, Document, Types } from 'mongoose';
 
+type roles = 'sitter' | 'owner';
 export interface I_User {
   email: string;
   password: string;
@@ -8,14 +9,13 @@ export interface I_User {
 export interface I_UserDocument extends Document, I_User {
   id: Types.ObjectId;
   email: string;
-  role: 'sitter' | 'owner';
-  profileId: Types.ObjectId;
+  roles: roles[];
 }
 
 export interface I_UserCreate extends I_User {
   email: string;
   password: string;
-  role: 'sitter' | 'owner';
+  roles: roles;
   profilePicture: string;
   firstName: string;
   lastName: string;
@@ -25,6 +25,7 @@ export interface I_UserCreate extends I_User {
   acceptedPets?: string | string[]; // sitter profile
   presentation?: string; // sitter profile
   pets?: string | string[]; // owner profile
+  userId: Types.ObjectId;
 }
 
 export interface I_UserUpdate {
@@ -35,8 +36,8 @@ export interface I_UserUpdate {
 const userSchema = new Schema<I_UserDocument>({
   email: { type: String, required: true, unique: true },
   password: { type: String, required: true },
-  role: { type: String, required: true },
-  profileId: { type: Schema.Types.ObjectId, ref: 'Profile' },
+  roles: { type: [String], required: true },
+  // profileId: { type: Schema.Types.ObjectId, ref: 'Profile' },
 });
 
 // Hide password when converting to JSON
@@ -45,7 +46,7 @@ userSchema.set('toJSON', {
     ret.id = ret._id;
     delete ret._id;
     delete ret.password; // Remove the password field
-    delete ret.__v; // Optionally remove __v field if it's not needed
+    delete ret.__v;
   },
 });
 
